--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "@nestjs/websockets": "^10.2.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,6 +39,7 @@
     "@types/node": "^20.3.1",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
