--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-parallax-tilt": "^1.7.175",
     "react-router-dom": "^6.19.0",
     "socket.io-client": "^4.7.2"
   },
