--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "server",
-  "version": "0.0.1",
+  "name": "agile-poker-server",
+  "version": "0.1.0",
   "description": "",
-  "author": "",
+  "author": "Dmitrii",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "Open Source",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
