--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,8 @@
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.7",
+    "uuid": "^9.0.1",
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
