--- a/app/package.json
+++ b/app/package.json
@@ -13,19 +13,20 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.2",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-parallax-tilt": "^1.7.175",
+    "react-parallax-tilt": "^1.7.209",
     "react-router-dom": "^6.19.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.7",
-    "uuid": "^9.0.1",
+    "@biomejs/biome": "1.5.3",
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
@@ -36,6 +37,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "uuid": "^9.0.1",
+    "vite": "^5.0.12"
   }
 }
